feat: agregar slogan para portal de servicios

--- a/web/index.html
+++ b/web/index.html
@@ -505,7 +505,10 @@
 
         <!-- SERVICES CATALOG -->
         <section id="servicios" class="container mt-xl">
-            <h2 class="text-4xl text-center mb-lg">Productos y entregables</h2>
+            <h2 class="text-4xl text-center mb-sm">Productos y entregables</h2>
+            <p class="text-muted text-xl text-center mb-lg" style="max-width: 70ch; margin-left: auto; margin-right: auto;">
+                ¿Necesitas un portal de servicios para atender a tus clientes? Nosotros lo hacemos realidad: diseño, implementación, métricas y operación.
+            </p>
             
             <div class="services-grid">
                 <article class="card">
